@@ -1,46 +1,36 @@
 package lotto.model;
 
-import java.util.ArrayList;
-import java.util.List;
+import static lotto.rule.LottoConstants.Price.LOTTO_PRICE_UNIT;
+
+import java.util.Objects;
 
 public class Cashier {
 
-    private static final int LOTTO_PURCHASE_AMOUNT_UNIT = 1_000;
+    private final LottoMachine lottoMachine;
 
-    public List<Lotto> payForLotto(int amount) {
-        int count = calculateLottoCount(amount);
-        return issueLottoByCount(count);
+    public Cashier(LottoMachine lottoMachine) {
+        Objects.requireNonNull(lottoMachine, "로또 발급기는 null이 될 수 없습니다.");
+        this.lottoMachine = lottoMachine;
     }
 
-    private List<Lotto> issueLottoByCount(int count) {
-        List<Lotto> lottos = new ArrayList<>();
-        for (int i = 0; i < count; i++) {
-            lottos.add(LottoMachine.issue());
-        }
-        return List.copyOf(lottos);
+    public LottoTicket payForLotto(int amount) {
+        int count = calculateLottoCount(amount);
+        return lottoMachine.issueLottoTicket(count);
     }
 
     private int calculateLottoCount(int amount) {
         validateAmount(amount);
-        return amount / LOTTO_PURCHASE_AMOUNT_UNIT;
+        return amount / LOTTO_PRICE_UNIT;
     }
 
     private void validateAmount(int amount) {
-        if (isZeroAmount(amount)) {
-            String message = String.format("로또를 구매하려면 최소 %,d원 이상이어야 합니다.", LOTTO_PURCHASE_AMOUNT_UNIT);
-            throw new IllegalArgumentException(message);
+        boolean isZeroAmount = amount == 0;
+        if (isZeroAmount) {
+            throw new IllegalArgumentException("로또를 구매하려면 최소 %,d원 이상이어야 합니다.".formatted(LOTTO_PRICE_UNIT));
         }
-        if (isNonDivisibleByUnit(amount)) {
-            String message = String.format("로또는 %,d원 단위로 구매할 수 있습니다.", LOTTO_PURCHASE_AMOUNT_UNIT);
-            throw new IllegalArgumentException(message);
+        boolean isNonDivisibleByUnit = amount % LOTTO_PRICE_UNIT != 0;
+        if (isNonDivisibleByUnit) {
+            throw new IllegalArgumentException("로또는 %,d원 단위로 구매할 수 있습니다.".formatted(LOTTO_PRICE_UNIT));
         }
-    }
-
-    private boolean isZeroAmount(int amount) {
-        return amount == 0;
-    }
-
-    private boolean isNonDivisibleByUnit(int amount) {
-        return amount % LOTTO_PURCHASE_AMOUNT_UNIT != 0;
     }
 }
